welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: illegal start of simple expression
  }return -1
  ^indexOfValue:6: error: ';' expected but 'return' found.
  }return -1
   ^